SET( viewdemo_SRC
  "wholedemo.cpp"
)


SET(QT_USE_QTOPENGL TRUE)

FIND_PACKAGE( Qt4 REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )  
FIND_PACKAGE( OpenCV REQUIRED ) 
FIND_PACKAGE( "PCL" REQUIRED )

INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS} 
     ${OpenCV_INCLUDE_DIR}
     ${QT_INCLUDE_DIR}
  ${QT_INCLUDE_DIR}/QtOpenGL
${PCL_INCLUDE_DIRS}
      )  

#QT4_WRAP_CPP( SAMPLE_MOC_SRCS ${SAMPLE_MOC_HDRS} )


ADD_EXECUTABLE( wholedemo ${viewdemo_SRC} )
TARGET_LINK_LIBRARIES( wholedemo 
  NUKinect  
${PCL_LIBRARIES}
 # ${QT_LIBRARIES}
 # ${OPENGL_LIBRARIES}
 # ${OpenCV_LIBS}  
)
